improving typesetting at start

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <!-- end SS declarations -->
               <div class="slide">
                 <img src="img/openasic.jpg"/>
-                <p>This equation governs the value an entire class of goods;</p>
+                <p class="indent intro">This equation governs the value an entire class of goods;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
@@ -75,11 +75,11 @@
               </div>
               <div class="slide">
                 <div class="bluebg postit"><p class="lead bottomalign">Services deliver particular outcomes and experiences when and where needed.</p></div>
-                <p>Think of the many ways to pay for something or getting somewhere. <br/><br/>Outcomes are the “goods” and experience is the “packaging”. <br/><br/>Post-industrial goods, or PIGS.</p>
+                <p class="indent">Think of the many ways to pay for something or getting somewhere. <br/><br/>Outcomes are the “goods” and experience is the “packaging”. <br/><br/>Post-industrial goods, or PIGS.</p>
               </div>
               <div class="slide last">
                 <div class="greenbg postit"><p class="lead bottomalign">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p></div>
-                <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
+                <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
 <!--               <div class="cycle-pager"></div> -->
@@ -103,19 +103,19 @@
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
-                <p class="indent">It determines success in delivering complex value propositions;</p>
+                <p class="indent intro">It determines success in delivering complex value propositions;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">Why do some services flourish and others, forgive the pun, flounder?</p></div>
-                <p class="">What gives some category leaders immunity from challengers? <br/><br/>What gives some challengers the impunity to take on establishments?</p>
+                <p class="indent">What gives some category leaders immunity from challengers? <br/><br/>What gives some challengers the impunity to take on establishments?</p>
               </div>
               <div class="slide">
                 <div class="bluebg postit"><p class="lead bottomalign">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p></div>
-                <p class="">Superior design provides an unfair advantage they fully exploit. Think of design as genetic code.</p>
+                <p class="indent">Superior design provides an unfair advantage they fully exploit. Think of design as genetic code.</p>
               </div>
               <div class="slide">
                 <div class="greenbg postit"><p class="lead bottomalign">They package and deliver outcomes better than others; making sure that the quality of experience is not just a matter of users feeling good.</p></div>
-                <p class="">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
+                <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
               <div class="minipostit-pager"></div>
@@ -138,19 +138,19 @@
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
-                <p class="indent">It shapes business strategy and government policy;</p>
+                <p class="indent intro">It shapes business strategy and government policy;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">The business model is pitch perfect and the strategy is sound. <br/><br/>Government policy is clear about about what’s best in the public interest.</p></div>
-                <p>How do you make sure policy and strategy won’t fall flat in implementation and operation?</p>
+                <p class="indent">How do you make sure policy and strategy won’t fall flat in implementation and operation?</p>
               </div>
               <div class="slide">
                 <div class="bluebg postit"><p class="lead bottomalign">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p></div>
-                <p>Design is an expression of policy and strategy in the form of code; we know good code makes all the difference.</p>
+                <p class="indent">>Design is an expression of policy and strategy in the form of code; we know good code makes all the difference.</p>
               </div>
               <div class="slide">
                 <div class="greenbg postit"><p class="lead bottomalign">Good design reduces the risk the expected value fails to materialize. <br/><br/>Great design creates unexpected value with superior outcomes and experiences at a lower cost.</p></div>
-                <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
+                <p class="indent">>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
               <div class="minipostit-pager"></div>
