improving button, improving quote styles

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <!-- /END COLUMN 3 -->
         </div>
         <div class="row">
-          <a class="scroll btn pagedown" href="#quote">Next</a>
+          <a class="scroll btn btn-large pagedown" href="#quote">O-P/E=N</a>
         </div>
       </section>
     </article>
