tweak JS for email capture

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             <div class="cycle-slideshow ss"
               data-cycle-fx="fadeOut"
               data-cycle-timeout="0"
-              data-cycle-next="#slideshow"
-              data-cycle-swipe=true
+              data-cycle-next="> div.slide"
+              data-cycle-swipe="true"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="4"
               data-cycle-allow-wrap="false"
@@ -275,9 +275,7 @@
               <div class="slide span12 measure">
                 <div class="row toprow">
                   <img class="span12" src="img/explanation.jpg" alt="Explanatory image of D#C process flow"/>
-                </div>
-                <div class="row bottomrow">
-                  <h3 class="span12 text-center">Source code for design in the native languages of services</h3>
+                  <h3 class="span12 text-center">Design Signal Processing&trade;</h3>
                 </div>
               </div>
               <!-- END Giant Explanation image -->
@@ -365,7 +363,7 @@
     <!-- Footer!
     ================================================== -->
     <footer class="container">
-      <p class="pull-right"><small>&copy;2013 Design#Code LLC</small></p>
+      <p class="pull-right"><small>&copy;2013 design#code LLC</small></p>
     </footer>
 
     <!-- Le javascript
