adding space for bold statement

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                   <img class="span4" src="img/3postits-colored.png"/>
                 </div>
                 <div class="row bottomrow">
+                  <h3 class="span12">BOLD STATMENT&trade;</h3>
                   <p class="span4"><strong>Everybody can code</strong> <br/>Punched cards and paper tape were once used to write computer code. Of course, not everybody could program a computer. <br/><br/>Imagine a new kind of code using Post-It Notes®, making programmers out of Army officers and physicians; field agents, supervisors and technicians; postal workers and flight attendants; the policymaker and the legislator.</p>
                   <p class="span4"><strong>Ideas, observations, and insight</strong> <br/>They may not be designers but they know a lot about getting a particular job done, better, faster and cheaper. <br/><br/>They have ideas, observations and insight, in their heads and across various files and formats, they routinely put these into messages and meeting notes; sketches and diagrams; maps and plans; spreadsheets and charts. They tag photos and videos.</p>
                   <p class="span4"><strong>Embedded logic</strong> <br/>In there are design statements; except that nobody is really sure or aware. Organizations are inherently noisy. <br/><br/>What if an embedded logic could filter the noise and passively convert these statements and expressions into a rich and complete design? As new ideas, observations and insights flow, the design updates itself; or at least begs for attention!</p>
