replacing icon image with better sized one

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     
     <!-- / Email Capture!
     ================================================== -->
-    <article id="stayinformed" class="subsection">
+    <article id="stayinformed" class="subsection text-center">
       <section class="container">
         <div class="row toprow">
           <h1 class="span6 offset3 jumbo text-center">Watch this Space</h1>
@@ -372,20 +372,20 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-<!--     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
     <script src="js/jquery-1.10.1.min.js"></script>
-<!--     <script src="http://cdn.s3.ookb.co/bootstrap/js/bootstrap.js"></script> -->
     <script src="js/bootstrap.js"></script>
-<!--     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script> -->
     <script src="js/jquery.cycle2.min.js"></script>
-<!--     <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script> -->
     <script src="js/jquery.cycle2.center.min.js"></script>
-<!--     <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script> -->
 <!--     <script src="js/jquery.cycle2.swipe.min.js"></script> -->
-<!--     <script src="http://malsup.github.io/ios6fix.js"></script> -->
     <script src="js/ios6fix.js"></script>
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
+
+    <!--
+    This site was built by Kristian Bjornard @ http://www.ookb.co/
+    It was built using Twitter Bootstrap, jQuery Cycle2, and some other custom HTML, CSS, and JS magic.
+    All graphics are © design#code llc.
+    -->
 
   </body>
 </html>
