--- a/index.html
+++ b/index.html
@@ -258,8 +258,11 @@
               <!-- Canvases / Closeup / Examine the logic threads -->
               <div class="slide span12">
                 <div class="row toprow graybg">
-                  <img class="span8" src="img/unfoldpiece.png"/>
+<!--
+                  <img class="span8" src="img/canvasdetail.jpg"/>
                   <img class="span4" src="img/logicthread.png"/>
+-->
+                  <img class="span12 outdent" src="img/threadandcanvas.jpg" />
                 </div>
                 <div class="row bottomrow">
                   <h3 class="span12">Raising the bar by lowering the barrier&trade;</h3>
@@ -307,22 +310,9 @@
               <!-- END SECTION 8 -->
   
               <!-- PAGER @ THE BOTTOM -->
-              <!-- PAGER @ THE BOTTOM -->
-              <!-- PAGER @ THE BOTTOM -->
-<!--               <div class="cycle-pager span6 offset3"></div> -->
               <div class="minipostit-pager span6 offset3"></div>
             </div>
-    
-<!--
-            <div class="span12 slidenav">
-              <div class="row">
-                <div class="span3 pull-right text-right"><a href=# id="next" class="slidenav">&raquo;</a></div>
-                <div class="span3"><a href=# id="prev" class="slidenav">&laquo;</a></div>
               </div>
-            </div>
--->
-  
-          </div>
         </div>
       </section>
     </article>
