scrollspy basically working

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
-  <body id="pagetop">
+  <body data-spy="scroll" data-target="header">
 
     <!-- Header!
     ================================================== -->
@@ -362,6 +362,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
     <script src="js/jquery.cycle2.min.js"></script>
     <script src="js/jquery.cycle2.center.min.js"></script>
 <!--     <script src="js/jquery.cycle2.swipe.min.js"></script> -->
