improving final slide designs

--- a/index.html
+++ b/index.html
@@ -292,17 +292,22 @@
               <div class="slide span12"id="revealing"> 
                 <div class="row toprow">
                   <div class="span4 offset4 reveal">
-                    <img class="fadeorder one" src="img/end1-beam.png"/>
-                    <img class="fadeorder two"  src="img/end2-story.png"/>
-                    <img class="fadeorder three"  src="img/end3-quilt.png"/>
-                    <img class="fadeorder four"  src="img/end4-target.png"/>
-                    <img class="fadeorder five"  src="img/end5-grid.png"/>
-                    <h2 class="muted jumbo text-center fadeorder six">design<span>#</span>code</h2>
-                  </div>
-                </div>
-                <div class="row bottomrow">
-                  <div class="span4 offset4">
-                    <p class="fadeorder six">A system for developing breakthrough solutions in the form factor of services</p>
+                    <div class="cycle-slideshow"
+                      data-cycle-fx="fadeOut"
+                      data-cycle-timeout="500"
+                      data-cycle-slides="> div"
+                      data-cycle-allow-wrap="false"
+                      >
+                      <div><img class="fadeorder one" src="img/end1-beam.png"/></div>
+                      <div><img class="fadeorder two" src="img/end2-story.png"/></div>
+                      <div><img class="fadeorder three" src="img/end3-quilt.png"/></div>
+                      <div><img class="fadeorder four" src="img/end4-target.png"/></div>
+                      <div><img class="fadeorder five" src="img/end5-grid.png"/></div>
+                      <div class="fadeorder six">
+                        <h2 class="muted jumbo text-center">design<span>#</span>code</h2>
+                        <p class="lead">A system for developing breakthrough solutions in the form factor of services</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -312,7 +317,7 @@
               <!-- PAGER @ THE BOTTOM -->
               <div class="minipostit-pager span6 offset3"></div>
             </div>
-              </div>
+          </div>
         </div>
       </section>
     </article>
