deleting hyphen styles, disabling broken fittext

--- a/index.html
+++ b/index.html
@@ -294,16 +294,16 @@
                   <div class="span4 offset4 reveal">
                     <div class="cycle-slideshow"
                       data-cycle-fx="fadeOut"
-                      data-cycle-timeout="500"
+                      data-cycle-timeout="777"
                       data-cycle-slides="> div"
-                      data-cycle-allow-wrap="false"
+                      data-cycle-loop="1"
                       >
                       <div><img class="fadeorder one" src="img/end1-beam.png"/></div>
                       <div><img class="fadeorder two" src="img/end2-story.png"/></div>
                       <div><img class="fadeorder three" src="img/end3-quilt.png"/></div>
                       <div><img class="fadeorder four" src="img/end4-target.png"/></div>
                       <div><img class="fadeorder five" src="img/end5-grid.png"/></div>
-                      <div class="fadeorder six">
+                      <div class="fadeorder six linktosi">
                         <h2 class="muted jumbo text-center">design<span>#</span>code</h2>
                         <p class="lead">A system for developing breakthrough solutions in the form factor of services</p>
                       </div>
@@ -372,6 +372,8 @@
     <script src="js/jquery.cycle2.center.min.js"></script>
 <!--     <script src="js/jquery.cycle2.swipe.min.js"></script> -->
     <script src="js/ios6fix.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
 
