beginning to get it to cycle inside of the cycle

--- a/index.html
+++ b/index.html
@@ -289,14 +289,15 @@
   
               <!-- SECTION 8 -->
               <!-- Giant Explanation image -->
-              <div class="slide span12"id="revealing"> 
+              <div class="slide span12" id="revealing"> 
                 <div class="row toprow">
                   <div class="span4 offset4 reveal">
-                    <div class="cycle-slideshow"
+                    <div id="revealingss"
                       data-cycle-fx="fadeOut"
-                      data-cycle-timeout="777"
+                      data-cycle-timeout="555"
                       data-cycle-slides="> div"
                       data-cycle-loop="1"
+                      data-cycle-allow-wrap="false"
                       >
                       <div><img class="fadeorder one" src="img/end1-beam.png"/></div>
                       <div><img class="fadeorder two" src="img/end2-story.png"/></div>
