--- a/index.html
+++ b/index.html
@@ -186,8 +186,11 @@
     <article id="quote2" class="subsection stack">
       <section class="container">
         <div class="row">
-          <h2 class="span8 offset2 bigquote">If design should be code, then the &ldquo;programmers&rdquo; should be nurses and physicians; field agents and
+          <h2 class="span8 offset2 bigquote"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">If design should be code</a>, then the &ldquo;programmers&rdquo; should be nurses and physicians; field agents and
 technicians; postal workers and flight attendants; <br/>the policymaker, legislator; and Army generals.</h2>
+        </div>
+        <div class="row">
+          <a class="span3 offset2 scroll btn add-top" href="#logic">The System</a>
         </div>
       </section>
     </article>
@@ -209,9 +212,10 @@ technicians; postal workers and flight attendants; <br/>the policymaker, legisla
               data-cycle-swipe="true"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="4"
-              data-cycle-allow-wrap="false"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="minipostit"><a href=#> {{slideNum}} </a></span>'
+              data-cycle-loop="1"
+              data-cycle-allow-wrap="false"
               >
               
               <!-- SECTION 3 -->
@@ -332,7 +336,7 @@ encoding of business model and strategy.</p>
                   <div class="span4 offset4 reveal">
                     <div id="revealingss"
                       data-cycle-fx="fadeOut"
-                      data-cycle-timeout="555"
+                      data-cycle-timeout="333"
                       data-cycle-slides="> div"
                       data-cycle-loop="1"
                       data-cycle-allow-wrap="false"
@@ -343,7 +347,7 @@ encoding of business model and strategy.</p>
                       <div><img class="fadeorder four" src="img/end4-target.png"/></div>
                       <div><img class="fadeorder five" src="img/end5-grid.png"/></div>
                       <div class="fadeorder six linktosi">
-                        <h2 class="muted jumbo text-center">design<span>#</span>code</h2>
+                        <h1 class="jumbo text-center">design<span>#</span>code</h1>
                         <p class="lead">A system for developing breakthrough solutions in the form factor of services</p>
                       </div>
                     </div>
