nearly there… need to get new fields for multiple emails...

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
           <h2 class="span8 offset2 bigquote"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">If design should be code</a>, then the &ldquo;programmers&rdquo; should be nurses and physicians; field agents and
 technicians; postal workers and flight attendants; <br/>the policymaker, legislator; and Army generals.</h2>
         </div>
-        <div class="row">
-          <a class="span3 offset2 scroll btn add-top" href="#logic">The System</a>
+        <div class="row add-top">
+          <a class="span4 offset2 scroll btn" href="#logic">The System</a>
         </div>
       </section>
     </article>
@@ -349,6 +349,7 @@ encoding of business model and strategy.</p>
                       <div class="fadeorder six linktosi">
                         <h1 class="jumbo text-center">design<span>#</span>code</h1>
                         <p class="lead">A system for developing breakthrough solutions in the form factor of services</p>
+                        <p class="small">(patent-pending)</p>
                       </div>
                     </div>
                   </div>
