fixing fadein of Nav

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <nav class="masthead">
           <ul class="nav nav-pills pull-right">
-            <li><a class="sometext"></a></li>
+<!--             <li><a class="sometext"></a></li> -->
             <li class="active"><a class="scroll" href="#intro">O-P/E=N</a></li>
             <li><a class="scroll" href="#logic">System</a></li>
             <li><a class="scroll" href="#stayinformed">Feedback</a></li>
