--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ technicians; postal workers and flight attendants; <br/>the policymaker, legisla
               data-cycle-next="> div.slide"
               data-cycle-swipe="true"
               data-cycle-slides="> div.slide"
-              data-cycle-auto-height="4"
+              data-cycle-auto-height="5"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="minipostit"><a href=#> {{slideNum}} </a></span>'
               data-cycle-loop="1"
@@ -295,12 +295,8 @@ encoding of business model and strategy.</p>
               <!-- SECTION 6 -->
               <!-- Canvases / Closeup / Examine the logic threads -->
               <div class="slide span12">
-                <div class="row toprow graybg">
-<!--
-                  <img class="span8" src="img/canvasdetail.jpg"/>
-                  <img class="span4" src="img/logicthread.png"/>
--->
-                  <img class="span12 outdent" src="img/threadandcanvas.jpg" />
+                <div class="row toprow">
+                  <img class="span12" src="img/raisingthebar2.jpg" />
                 </div>
                 <div class="row bottomrow">
 
@@ -318,6 +314,30 @@ encoding of business model and strategy.</p>
               </div>
               <!-- END Canvases / Closeup / Examine the logic threads -->
               <!-- END SECTION 6 -->
+
+              <!-- SECTION 6 -->
+              <!-- Canvases / Closeup / Examine the logic threads -->
+              <div class="slide span12">
+                <div class="row toprow">
+                  <img class="span12" src="img/raisingthebar.jpg" />
+                </div>
+                <div class="row bottomrow">
+
+                  <p class="span12 no-bottom"><strong>Raising the bar by lowering the barrier&trade;</strong></p>
+
+                  <p class="span4">By engaging in the design effort those who are otherwise not; either because they&rsquo;re too busy, or not trained in the &ldquo;black art&rdquo; i.e. formal methods in design and architecture.</p>
+
+                  <p class="span4">The single thread of logic through the 32 Design Functions readily integrates input from multiple perspectives, work sessions and work streams, so teams can </p>
+                  
+                  <p class="span4">collaborate in an asynchronous and parallel manner. This accelerates efforts and reduces pressure so there is enough time for discussion and creative conflict.</p>
+
+                  <h3 class="span12 text-center">So design is neither simplistic nor <br/>superficial; collaboration hazards</h3>
+
+                </div>
+              </div>
+              <!-- END Canvases / Closeup / Examine the logic threads -->
+              <!-- END SECTION 6 -->
+
               
               <!-- SECTION 7 -->
               <!-- Giant Explanation image -->
