some more updates

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="pagetop">
   <head>
     <meta charset="utf-8">
     <title>Design#Code</title>
@@ -40,7 +40,7 @@
             <li><a class="scroll" href="#logic">System</a></li>
             <li><a class="scroll" href="#stayinformed">Feedback</a></li>
           </ul>
-          <h1 class="muted">design<span>#</span>code</h1>
+          <h1 class="muted"><a class="scroll muted" href="#pagetop">design<span>#</span>code</a></h1>
         </nav>
       </div>
     </header> <!-- /container -->
@@ -212,7 +212,7 @@ technicians; postal workers and flight attendants; <br/>the policymaker, legisla
               data-cycle-next="> div.slide"
               data-cycle-swipe="true"
               data-cycle-slides="> div.slide"
-              data-cycle-auto-height="4"
+              data-cycle-auto-height="3"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="minipostit"><a href=#> {{slideNum}} </a></span>'
               data-cycle-loop="1"
@@ -285,7 +285,7 @@ technicians; postal workers and flight attendants; <br/>the policymaker, legisla
                   <p class="span4">Each canvas has 16 Design Functions in a 4x4 array, interlocked by the design logic, with charts in the margin for analysis and
 encoding of business model and strategy.</p>
 
-                  <h3 class="span12 text-center">The simple surfaces of canvases are <br/>embedded with sophisticated code</h3>
+                  <h3 class="span12 text-center">The simple surfaces of the canvases are <br/>embedded with sophisticated code</h3>
 
                 </div>
               </div>
@@ -334,7 +334,7 @@ encoding of business model and strategy.</p>
                   <div class="span4 offset4 reveal">
                     <div id="revealingss"
                       data-cycle-fx="fadeOut"
-                      data-cycle-timeout="333"
+                      data-cycle-timeout="111"
                       data-cycle-slides="> div"
                       data-cycle-loop="1"
                       data-cycle-allow-wrap="false"
