Added partner email signup form

--- a/index.html
+++ b/index.html
@@ -422,10 +422,10 @@ encoding of business model and strategy.</p>
           <div class="span4">
             <p>Tell us we’ll fail without you.</p>
             <!-- Begin MailChimp Signup Form -->
-            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=0d8e78f6e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
-            </form>            
+            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=ca2fb2866c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </form>
             <!--End mc_embed_signup-->
           </div>
           <!-- /PARTNERS -->
