--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@ encoding of business model and strategy.</p>
           <div class="span4">
             <p>Make us beg you to join us.</p>
             <!-- Begin MailChimp Signup Form FOR TALENT LIST -->
-            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=f0e788f5f3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=f0e788f5f3" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <input type="email" value="" name="EMAIL" class="required email" placeholder="Your Email Address">
+              <input type="submit" value="Subscribe" name="subscribe" class="button">
             </form>
             <!--End TALENT LIST mc_embed_signup-->
           </div>
@@ -412,8 +412,8 @@ encoding of business model and strategy.</p>
             <p>Or, let us watch it for you.</p>
             <!-- Begin MailChimp Signup Form -->
             <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=0d8e78f6e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email Address">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn">
+              <input type="email" value="" name="EMAIL" class="required email" placeholder="Your Email Address">
+              <input type="submit" value="Subscribe" name="subscribe" class="button">
             </form>            
             <!--End mc_embed_signup-->
           </div>
@@ -422,9 +422,9 @@ encoding of business model and strategy.</p>
           <div class="span4">
             <p>Tell us we’ll fail without you.</p>
             <!-- Begin MailChimp Signup Form -->
-            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=ca2fb2866c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=ca2fb2866c" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <input type="email" value="" name="EMAIL" class="required email" placeholder="Your Email Address">
+              <input type="submit" value="Subscribe" name="subscribe" class="button">
             </form>
             <!--End mc_embed_signup-->
           </div>
