adding swipe true to all ss

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
               data-cycle-loop="1"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
+              data-cycle-swipe="true"
               >
               <!-- end SS declarations -->
               <div class="slide">
@@ -96,7 +97,7 @@
                 <div class="bluebg postit"><p class="lead bottomalign">The value is from having those &ldquo;goods&rdquo; guaranteed within particular places, times and platforms.</p></div>
                 <p class="indent">Outcomes are the &ldquo;goods&rdquo; and experience is the &ldquo;packaging.&rdquo; <br/><br/>Post-industrial goods, or PIGS, in the form-factor of experience.</p>
               </div>
-              <div class="slide last">
+              <div class="slide">
                 <div class="greenbg postit"><p class="lead bottomalign">Affected gains and avoided losses from the rendering of a customer asset, or the renting of a resource.</p></div>
                 <p class="indent">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>O = Quality of Outcomes</p>
               </div>
@@ -119,6 +120,7 @@
               data-cycle-loop="1"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
+              data-cycle-swipe="true"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
@@ -154,6 +156,7 @@
               data-cycle-loop="1"
               data-cycle-pager="> .minipostit-pager"
               data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
+              data-cycle-swipe="true"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
@@ -518,11 +521,15 @@ encoding of business model and strategy.</p>
     <script src="js/bootstrap-scrollspy.js"></script>
     <script src="js/jquery.cycle2.min.js"></script>
     <script src="js/jquery.cycle2.center.min.js"></script>
-<!--     <script src="js/jquery.cycle2.swipe.min.js"></script> -->
+    <script src="js/jquery.cycle2.swipe.min.js"></script>
     <script src="js/ios6fix.js"></script>
     
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
+
+
+
+
 
     <!--
     This site was built by Kristian Bjornard @ http://www.ookb.co/
