--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- Intro!
     ================================================== -->
-    <article id="intro" class="subsection stack">
+    <article id="intro" class="subsection">
       <section class="container">
         <div class="row">
           <!-column 1 -->
@@ -195,7 +195,7 @@
 
     <!-- Einstein Quote!
     ================================================== -->
-    <article id="quote" class="subsection stack">
+    <article id="quote" class="subsection">
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
@@ -216,7 +216,7 @@
 
     <!-- big ¶!
     ================================================== -->
-    <article id="quote2" class="subsection stack">
+    <article id="quote2" class="subsection">
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">If design should be code</a>, then the &ldquo;programmers&rdquo; should be nurses and physicians; field agents and
