adding some better notes @ bottom

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" id="pagetop">
   <head>
     <meta charset="utf-8">
-    <title>Design#Code</title>
+    <title>Design#Code &bull; A system for developing breakthrough solutions in the form factor of services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -529,7 +529,7 @@ encoding of business model and strategy.</p>
 
     <!--
     This site was built by Kristian Bjornard @ http://www.ookb.co/
-    built with help from Twitter Bootstrap, jQuery Cycle2, and holes filled in with some custom HTML, CSS, and JS magic.
+    built with help from Twitter Bootstrap v2.3.2 (http://getbootstrap.com/2.3.2/), jQuery Cycle2 (http://jquery.malsup.com/cycle2/), and holes filled in with some custom HTML, CSS, and JS magic.
     All graphics are © design#code llc.
     -->
 
