--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ encoding of business model and strategy.</p>
               <!-- Giant Explanation image -->
               <div class="slide span12 measure">
                 <div class="row toprow">
-                  <img class="span12" src="img/dsp-a.png" alt="Explanatory image of D#C signal processing"/>
+                  <img class="span12" src="img/dsp-c.png" alt="Explanatory image of D#C signal processing"/>
                   <h3 class="span12 text-center">Design Signal Processing&trade;</h3>
                 </div>
               </div>
