--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ encoding of business model and strategy.</p>
               <!-- Giant Explanation image -->
               <div class="slide span12 measure">
                 <div class="row toprow">
-                  <img class="span12" src="img/dsp-c.png" alt="Explanatory image of D#C signal processing"/>
+                  <img class="span12" src="img/dsp-d.png" alt="Explanatory image of D#C signal processing"/>
                   <h3 class="span12 text-center">Design Signal Processing&trade;</h3>
                 </div>
               </div>
@@ -529,8 +529,8 @@ encoding of business model and strategy.</p>
 
     <!--
     This site was built by Kristian Bjornard @ http://www.ookb.co/
-    built with help from Twitter Bootstrap v2.3.2 (http://getbootstrap.com/2.3.2/), jQuery Cycle2 (http://jquery.malsup.com/cycle2/), and holes filled in with some custom HTML, CSS, and JS magic.
-    All graphics are © design#code llc.
+    built with help from Twitter Bootstrap v2.3.2 (http://getbootstrap.com/2.3.2/), jQuery Cycle2 (http://jquery.malsup.com/cycle2/), and holes filled in with custom HTML, CSS, and JS magic.
+    All graphics are copyright© design#code llc.
     -->
 
   </body>
