massive additions to “navigation improvments”

--- a/index copy.html ~rev.html
+++ b/index copy.html ~rev.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!--     <link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all"> -->
     <link href="css/dc.css" rel="stylesheet" type="text/css" media="all">
 
@@ -177,11 +177,8 @@
           </div>
           <!-- /END COLUMN 3 -->
         </div>
-<!--
+        <div class="row">
           <a class="scroll btn btn-large pagedown" href="#quote">O-P/E=N</a>
--->
-        <div class="row pagedown">
-          <a class="scroll" href="#inbetween">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -196,23 +193,41 @@
 
 
 
-    <!-- In between bits!
+    <!-- Einstein Quote!
     ================================================== -->
-    <article id="inbetween" class="subsection">
+    <article id="quote" class="subsection">
       <section class="container">
         <div class="row">
-          <h1 class="jumbo text-center">design<span>#</span>code</h1>
-          <p class="lead text-center add-top">A system for developing breakthrough solutions in the form factor of services</p>
-        </div>
-        <div class="row add-top">
-          <h2 class="span8 offset2 bigquote text-center"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">Design is code</a>, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
-        </div>
-        <div class="row pagedown">
-          <a class="scroll" href="#logic">&#x25BC;</a>
+          <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
+          <p class="span8 offset2 byline">&mdash; Albert Einstein</p>
         </div>
       </section>
     </article>
-    <!-- / In between bits!
+    <!-- / Einstein Quote!
+    ================================================== -->
+
+
+
+
+
+
+
+
+
+    <!-- big ¶!
+    ================================================== -->
+    <article id="quote2" class="subsection">
+      <section class="container">
+        <div class="row">
+          <h2 class="span8 offset2 bigquote"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">If design should be code</a>, then the &ldquo;programmers&rdquo; should be nurses and physicians; field agents and
+technicians; postal workers and flight attendants; <br/>the policymaker, legislator; and Army generals.</h2>
+        </div>
+        <div class="row add-top">
+          <a class="span4 offset2 scroll btn" href="#logic">The System</a>
+        </div>
+      </section>
+    </article>
+    <!-- / Big ¶!
     ================================================== -->
 
 
@@ -385,9 +400,6 @@ encoding of business model and strategy.</p>
             </div>
           </div>
         </div>
-        <div class="row pagedown text-center">
-          <a class="scroll" href="#stayinformed">&#x25BC;</a>
-        </div>
       </section>
     </article>
     <!-- end the intro text stuff -->
@@ -470,9 +482,6 @@ encoding of business model and strategy.</p>
           <!-- /PARTNERS -->
 
         </div>
-        <div class="row pagedown">
-          <a class="scroll" href="#pagetop">&#x25B2;</a>
-        </div>
       </section>
     </article>
     <!-- / Email Capture!
@@ -504,7 +513,7 @@ encoding of business model and strategy.</p>
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-1.10.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap-scrollspy.js"></script>
     <script src="js/jquery.cycle2.min.js"></script>
     <script src="js/jquery.cycle2.center.min.js"></script>
