--- a/index.html
+++ b/index.html
@@ -177,11 +177,8 @@
           </div>
           <!-- /END COLUMN 3 -->
         </div>
-<!--
-          <a class="scroll btn btn-large pagedown" href="#quote">O-P/E=N</a>
--->
-        <div class="row pagedown">
-          <a class="scroll" href="#inbetween">&#x25BC;</a>
+        <div class="row pagedown add-top text-center">
+          <a class="scroll span12" href="#inbetween">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -207,8 +204,8 @@
         <div class="row add-top">
           <h2 class="span8 offset2 bigquote text-center"><a class="raiseabove" target="_blank" href="http://hbr.org/product/from-blueprint-to-genetic-code-the-merits-of-an-ev/an/ROT165-PDF-ENG">Design is code</a>, and the “programmers” are nurses and physicians; field agents and technicians; postal workers and flight attendants; the policymaker, legislator; and the Army general.</h2>
         </div>
-        <div class="row pagedown">
-          <a class="scroll" href="#logic">&#x25BC;</a>
+        <div class="row pagedown add-top text-center">
+          <a class="scroll span12" href="#logic">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -346,47 +343,19 @@ encoding of business model and strategy.</p>
                 <div class="row toprow">
                   <img class="span12" src="img/dsp-d.png" alt="Explanatory image of D#C signal processing"/>
                   <h3 class="span12 text-center">Design Signal Processing&trade;</h3>
+                  <p class="span12 text-center small">(patent-pending)</p>
                 </div>
               </div>
               <!-- END Giant Explanation image -->
               <!-- END SECTION 7 -->
-  
-              <!-- SECTION 8 -->
-              <!-- Giant Explanation image -->
-              <div class="slide span12" id="revealing"> 
-                <div class="row toprow">
-                  <div class="span4 offset4 reveal">
-                    <div id="revealingss"
-                      data-cycle-fx="fadeOut"
-                      data-cycle-timeout="111"
-                      data-cycle-slides="> div"
-                      data-cycle-loop="1"
-                      data-cycle-allow-wrap="false"
-                      >
-                      <div><img class="fadeorder one" src="img/end1-beam.png"/></div>
-                      <div><img class="fadeorder two" src="img/end2-story.png"/></div>
-                      <div><img class="fadeorder three" src="img/end3-quilt.png"/></div>
-                      <div><img class="fadeorder four" src="img/end4-target.png"/></div>
-                      <div><img class="fadeorder five" src="img/end5-grid.png"/></div>
-                      <div class="fadeorder six linktosi">
-                        <h1 class="jumbo text-center">design<span>#</span>code</h1>
-                        <p class="lead">A system for developing breakthrough solutions in the form factor of services</p>
-                        <p class="small">(patent-pending)</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- END Giant Explanation image -->
-              <!-- END SECTION 8 -->
-  
+    
               <!-- PAGER @ THE BOTTOM -->
               <div class="minipostit-pager span6 offset3"></div>
             </div>
           </div>
         </div>
-        <div class="row pagedown text-center">
-          <a class="scroll" href="#stayinformed">&#x25BC;</a>
+        <div class="row pagedown add-top text-center">
+          <a class="scroll span12" href="#stayinformed">&#x25BC;</a>
         </div>
       </section>
     </article>
@@ -470,8 +439,8 @@ encoding of business model and strategy.</p>
           <!-- /PARTNERS -->
 
         </div>
-        <div class="row pagedown">
-          <a class="scroll" href="#pagetop">&#x25B2;</a>
+        <div class="row pagedown add-top text-center">
+          <a class="scroll span12" href="#pagetop">&#x25B2;</a>
         </div>
       </section>
     </article>
